force-app/main/default/objects/PreLead__c/fields/AmountTasksStepCadence__c.field-meta.xml
<CustomField>
    <fullName>AmountTasksStepCadence__c</fullName>
    <label>Total atividades etapa atual cadência</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>