force-app/main/default/objects/PreLead__c/fields/CadenceAttempt__c.field-meta.xml
<CustomField>
    <fullName>CadenceAttempt__c</fullName>
    <formula>IF(ISNULL(CurrentCadenceStartTime__c),0,
(TODAY() - DATEVALUE(CurrentCadenceStartTime__c)) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias corridos da Cadencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>