force-app/main/default/objects/PreLead__c/fields/CadenceSize__c.field-meta.xml
<CustomField>
    <fullName>CadenceSize__c</fullName>
    <label>Tamanho da Cadencia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>