force-app/main/default/objects/PreLead__c/fields/CadenceStatus__c.field-meta.xml
<CustomField>
    <fullName>CadenceStatus__c</fullName>
    <formula>IF( OR( ISBLANK(CadenceAttempt__c), CadenceAttempt__c = 0),&apos;&apos;,
&quot;Dia &quot; + TEXT( CadenceStep__c ) + &quot; - atividades &quot; + TEXT( TaskCadDone__c )+ &quot; de &quot;+ TEXT( AmountTasksStepCadence__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Cadencia</label>
    <type>Text</type>
</CustomField>