force-app/main/default/objects/PreLead__c/fields/CadenceStep__c.field-meta.xml
<CustomField>
    <fullName>CadenceStep__c</fullName>
    <label>Dia da Cadencia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>