force-app/main/default/objects/PreLead__c/fields/CadenceStepDate__c.field-meta.xml
<CustomField>
    <fullName>CadenceStepDate__c</fullName>
    <label>Data Inicio Step Cadencia</label>
    <type>Date</type>
</CustomField>