force-app/main/default/objects/PreLead__c/fields/CPFCNPJ_Indicador__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJ_Indicador__c</fullName>
    <description>Demanda de integração Area Logada</description>
    <label>CPFCNPJ Indicador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>