force-app/main/default/objects/PreLead__c/fields/CurrentCadenceDone__c.field-meta.xml
<CustomField>
    <fullName>CurrentCadenceDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadência concluída</label>
    <type>Checkbox</type>
</CustomField>