force-app/main/default/objects/PreLead__c/fields/CurrentCadenceStartTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentCadenceStartTime__c</fullName>
    <label>Inicio Cadencia Atual</label>
    <type>DateTime</type>
</CustomField>