force-app/main/default/objects/PreLead__c/fields/Data_de_Anivers_rio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Anivers_rio__c</fullName>
    <description>Data de Aniversário</description>
    <label>Data de Aniversário</label>
    <type>Date</type>
</CustomField>