force-app/main/default/objects/PreLead__c/fields/Data_de_envio_de_foto_com_documento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_envio_de_foto_com_documento__c</fullName>
    <label>Data de envio de foto com documento</label>
    <type>Date</type>
</CustomField>