force-app/main/default/objects/PreLead__c/fields/Data_de_envio_do_contrato_social__c.field-meta.xml
<CustomField>
    <fullName>Data_de_envio_do_contrato_social__c</fullName>
    <label>Data de envio do contrato social</label>
    <type>Date</type>
</CustomField>