force-app/main/default/objects/PreLead__c/fields/Data_envio_documento_de_identificacao__c.field-meta.xml
<CustomField>
    <fullName>Data_envio_documento_de_identificacao__c</fullName>
    <label>Data envio documento de identificacao</label>
    <type>Date</type>
</CustomField>