force-app/main/default/objects/PreLead__c/fields/Data_Envio_Lead_ads__c.field-meta.xml
<CustomField>
    <fullName>Data_Envio_Lead_ads__c</fullName>
    <label>Data Envio Lead-ads</label>
    <type>Date</type>
</CustomField>