force-app/main/default/objects/PreLead__c/fields/DataAlteracao_CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>DataAlteracao_CPFCNPJ__c</fullName>
    <label>Data Alteracao CPFCNPJ</label>
    <type>DateTime</type>
</CustomField>