force-app/main/default/objects/PreLead__c/fields/DataAlteracao_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>DataAlteracao_Instalacao__c</fullName>
    <label>Data Alteracao Instalacao</label>
    <type>DateTime</type>
</CustomField>