force-app/main/default/objects/PreLead__c/fields/Edicao_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Edicao_Instalacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edicao Instalacao</label>
    <type>Checkbox</type>
</CustomField>