force-app/main/default/objects/PreLead__c/fields/Envio_de_foto_com_documento__c.field-meta.xml
<CustomField>
    <fullName>Envio_de_foto_com_documento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio de foto com documento</label>
    <type>Checkbox</type>
</CustomField>