force-app/main/default/objects/PreLead__c/fields/Fora_da_rea_de_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Fora_da_rea_de_Cobertura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fora da Área de Cobertura</label>
    <type>Checkbox</type>
</CustomField>