force-app/main/default/objects/PreLead__c/fields/Foto_com_documento_validada__c.field-meta.xml
<CustomField>
    <fullName>Foto_com_documento_validada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foto com documento validada</label>
    <type>Checkbox</type>
</CustomField>