force-app/main/default/objects/PreLead__c/fields/Gupshup__c.field-meta.xml
<CustomField>
    <fullName>Gupshup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gupshup</label>
    <type>Checkbox</type>
</CustomField>