force-app/main/default/objects/PreLead__c/fields/IDSfml__c.field-meta.xml
<CustomField>
    <fullName>IDSfml__c</fullName>
    <formula>Regiao__r.IDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDS</label>
    <type>Text</type>
</CustomField>