force-app/main/default/objects/PreLead__c/fields/Indicado_MGM_CPF__c.field-meta.xml
<CustomField>
    <fullName>Indicado_MGM_CPF__c</fullName>
    <label>Indicado MGM (CPF)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>