force-app/main/default/objects/PreLead__c/fields/Indicado_MGM_Nome__c.field-meta.xml
<CustomField>
    <fullName>Indicado_MGM_Nome__c</fullName>
    <label>Indicado MGM (Nome)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>