force-app/main/default/objects/PreLead__c/fields/Link_Temporario__c.field-meta.xml
<CustomField>
    <fullName>Link_Temporario__c</fullName>
    <label>Link Temporario</label>
    <type>Url</type>
</CustomField>