force-app/main/default/objects/PreLead__c/fields/MGMParceiro__c.field-meta.xml
<CustomField>
    <fullName>MGMParceiro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demanda de integração Area Logada</description>
    <label>MGM Parceiro</label>
    <type>Checkbox</type>
</CustomField>