force-app/main/default/objects/PreLead__c/fields/NextActivityDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextActivityDueDate__c</fullName>
    <label>Data Prox Atividade</label>
    <type>Date</type>
</CustomField>