force-app/main/default/objects/PreLead__c/fields/NextActivityDueDateCadence__c.field-meta.xml
<CustomField>
    <fullName>NextActivityDueDateCadence__c</fullName>
    <label>Data da próxima etapa da cadência</label>
    <type>Date</type>
</CustomField>