force-app/main/default/objects/PreLead__c/fields/Numero_de_Contatos_CRM__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Contatos_CRM__c</fullName>
    <label>Número de Contatos CRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>