force-app/main/default/objects/PreLead__c/fields/Parceria_Indicado__c.field-meta.xml
<CustomField>
    <fullName>Parceria_Indicado__c</fullName>
    <label>Parceria Indicado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>