force-app/main/default/objects/PreLead__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Região</label>
    <referenceTo>Regiao__c</referenceTo>
    <relationshipLabel>Pré Lead</relationshipLabel>
    <relationshipName>Pr_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>