force-app/main/default/objects/PreLead__c/fields/Regiaofml__c.field-meta.xml
<CustomField>
    <fullName>Regiaofml__c</fullName>
    <formula>Regiao__r.Regiao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Região</label>
    <type>Text</type>
</CustomField>