force-app/main/default/objects/PreLead__c/fields/ScoreSerasa__c.field-meta.xml
<CustomField>
    <fullName>ScoreSerasa__c</fullName>
    <label>Score Serasa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>