force-app/main/default/objects/PreLead__c/fields/TaskCad__c.field-meta.xml
<CustomField>
    <fullName>TaskCad__c</fullName>
    <label>Tarefas da Cadencia Disponiveis</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>