force-app/main/default/objects/PreLead__c/fields/TaskCadDone__c.field-meta.xml
<CustomField>
    <fullName>TaskCadDone__c</fullName>
    <label>Tarefas da Cadencia Concluidas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>