force-app/main/default/objects/PreLead__c/fields/Telefone_MKT__c.field-meta.xml
<CustomField>
    <fullName>Telefone_MKT__c</fullName>
    <label>Telefone MKT</label>
    <type>Phone</type>
</CustomField>